[tool.poetry]
name = "blackbox-monitoring-using-k6"
version = "0.1.0"
description = ""
authors = ["Theo Bob Massard <tbobm@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["standard"], version = "^0.115.5"}
pydantic = "^2.10.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
